k8s/lesson-05/producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer
          image: ghcr.io/tugrulocal/flight-data-pipeline-producer:v1.0.0-rc.3
          imagePullPolicy: IfNotPresent
